# sticky-note-scheduler

./: .cursorrules  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  scheduler.db
backend/alembic/: env.py
backend/alembic/versions/: 7847b15c4247_create_events_and_recurrence_tables.py  90badd5ebb25_merge_heads.py  fa4ee783ef4e_update_event_and_recurrence_schema.py
backend/app/: main.py
backend/app/api/: events.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: event.py
backend/app/schemas/: event.py
backend/app/services/: event.py
backend/app/tests/: conftest.py  test_events.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: event-scheduler-form.tsx  event-sticky-note.tsx
frontend/components/ui/: modal.tsx
frontend/lib/: actions.ts  api.ts  schema.ts  utils.ts
